<?xml version="1.0" encoding="utf-8"?>

<ScrollView

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Pro_UseActivity"
    android:orientation="vertical"
    >







    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">

        <TextView

            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginTop="0dp"
            android:layout_weight="5"
            android:text="@string/PLATINUM_PACKAGE"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="30sp" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="295dp"
            android:layout_weight="10"
            android:src="@drawable/pic1"
            android:contentDescription="@string/pic1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/NO_OF_GUESTS"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/black"

            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no1"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:textSize="20sp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/NO_OF_ROOMS"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/black"

            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no1"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:textSize="20dp"/>



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/NO_OF_BATHS"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/black"

            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no1"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:textSize="20sp"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/EST_VALUE"
            android:textColor="@android:color/black" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/No1"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp" />







    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">

        <TextView

            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_weight="5"
            android:text="@string/GOLD_PACKAGE"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="30sp"

            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="295dp"
            android:layout_weight="10"
            android:src="@drawable/pic2"
            android:contentDescription="@string/pic2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/NO_OF_GUESTS"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/black"

            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no2"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:textSize="20sp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/NO_OF_ROOMS"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/black"

            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no2"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:textSize="20sp"/>



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/NO_OF_BATHS"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/black"

            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no2"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:textSize="20sp"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/EST_VALUE"
            android:textColor="@android:color/black"

            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/No2"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:textSize="20sp"/>



    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">
        <TextView

            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="5"
            android:text="@string/SILVER_PACKAGE"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@android:color/black"

            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="290dp"
            android:layout_weight="10"
            android:src="@drawable/pic3"
            android:contentDescription="@string/pic3"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/NO_OF_GUESTS"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/black"

            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no3"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:textSize="20sp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/NO_OF_ROOMS"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/black"

            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no3"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:textSize="20sp"/>



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/NO_OF_BATHS"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/black"

            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no3"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:textSize="20sp"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/EST_VALUE"
            android:textColor="@android:color/black"

            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/No3"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:textSize="20sp"/>




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/r1"
            android:textColor="@android:color/black"
             style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:bufferType="normal"
            android:text="@string/r2"
            android:textColor="@android:color/black"
            style="?android:attr/buttonBarButtonStyle"/>


        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/r3"
            android:textColor="@android:color/black"
            style="?android:attr/buttonBarButtonStyle"/>


    </LinearLayout>





</LinearLayout>

</ScrollView>