<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="55dp">

        <FrameLayout
            android:id="@+id/fl1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="62dp"
                android:layout_marginLeft="62dp"
                android:layout_marginTop="61dp"
                android:text="@string/CheckOutMsg"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btncheckout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="93dp"
                android:onClick="showDatePickerDialog"
                android:text="@string/pick_date_out" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="62dp"
                android:layout_marginLeft="62dp"
                android:layout_marginTop="61dp"
                android:text="@string/CheckInMsg"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btncheckIn"
                android:layout_width="138dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="93dp"
                android:onClick="showDatePickerDialog"
                android:text="@string/pick_date_in" />

        </FrameLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_toStartOf="@+id/editTextGuestNo"
        android:layout_toLeftOf="@+id/editTextGuestNo"
        android:text="@string/no_of_guests" />

    <EditText
        android:id="@+id/editTextGuestNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="26dp"
        android:ems="10"
        android:hint="@string/enter_no_of_guests"
        android:inputType="number" />


</RelativeLayout>